--- a/index.html
+++ b/index.html
@@ -1,84 +1,60 @@
 <!DOCTYPE html>
 <html lang="pt">
-<head>
+<head><link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SpellTree - Status do Jogador</title>
+    <title>SpellTree - Mochila do Jogador</title>
     <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>SpellTree</h1>
-        <p>Modifique os status do seu personagem em tempo real!</p>
+        <h1>SpellTree - Mochila de Armas</h1>
+        <p>Armazene e visualize suas armas adquiridas</p>
     </header>
     
     <main>
-        <section class="status-section">
-            <h2>Gerenciar Status</h2>
-            <div class="status-container">
-                <div class="status">
-                    <label for="vigor">Vigor</label>
-                    <div class="slider-container">
-                        <input type="range" id="vigor" min="0" max="99" value="10" oninput="updateStatus()">
-                        <span id="vigor-value">10</span>
-                    </div>
-                </div>
+        <section class="backpack-section">
+            <h2>Mochila do Jogador</h2>
+            <p>Adicione armas à sua mochila e visualize as imagens aqui.</p>
 
-                <div class="status">
-                    <label for="mind">Mind</label>
-                    <div class="slider-container">
-                        <input type="range" id="mind" min="0" max="99" value="10" oninput="updateStatus()">
-                        <span id="mind-value">10</span>
-                    </div>
+            <div class="backpack-container">
+                <!-- Slots da mochila -->
+                <div class="backpack-slot" id="slot1" onclick="addWeapon(1)">
+                    <img src="" alt="Arma 1" id="weapon1" class="weapon-image">
                 </div>
-
-                <div class="status">
-                    <label for="endurance">Endurance</label>
-                    <div class="slider-container">
-                        <input type="range" id="endurance" min="0" max="99" value="10" oninput="updateStatus()">
-                        <span id="endurance-value">10</span>
-                    </div>
+                <div class="backpack-slot" id="slot2" onclick="addWeapon(2)">
+                    <img src="" alt="Arma 2" id="weapon2" class="weapon-image">
                 </div>
-
-                <div class="status">
-                    <label for="strength">Strength</label>
-                    <div class="slider-container">
-                        <input type="range" id="strength" min="0" max="99" value="10" oninput="updateStatus()">
-                        <span id="strength-value">10</span>
-                    </div>
+                <div class="backpack-slot" id="slot3" onclick="addWeapon(3)">
+                    <img src="" alt="Arma 3" id="weapon3" class="weapon-image">
                 </div>
-
-                <div class="status">
-                    <label for="dexterity">Dexterity</label>
-                    <div class="slider-container">
-                        <input type="range" id="dexterity" min="0" max="99" value="10" oninput="updateStatus()">
-                        <span id="dexterity-value">10</span>
-                    </div>
+                <div class="backpack-slot" id="slot4" onclick="addWeapon(4)">
+                    <img src="" alt="Arma 4" id="weapon4" class="weapon-image">
                 </div>
-
-                <div class="status">
-                    <label for="intelligence">Intelligence</label>
-                    <div class="slider-container">
-                        <input type="range" id="intelligence" min="0" max="99" value="10" oninput="updateStatus()">
-                        <span id="intelligence-value">10</span>
-                    </div>
+                <div class="backpack-slot" id="slot5" onclick="addWeapon(5)">
+                    <img src="" alt="Arma 5" id="weapon5" class="weapon-image">
                 </div>
-
-                <div class="status">
-                    <label for="faith">Faith</label>
-                    <div class="slider-container">
-                        <input type="range" id="faith" min="0" max="99" value="10" oninput="updateStatus()">
-                        <span id="faith-value">10</span>
-                    </div>
+                <div class="backpack-slot" id="slot6" onclick="addWeapon(6)">
+                    <img src="" alt="Arma 6" id="weapon6" class="weapon-image">
                 </div>
-
-                <div class="status">
-                    <label for="arcane">Arcane</label>
-                    <div class="slider-container">
-                        <input type="range" id="arcane" min="0" max="99" value="10" oninput="updateStatus()">
-                        <span id="arcane-value">10</span>
-                    </div>
+                <div class="backpack-slot" id="slot7" onclick="addWeapon(7)">
+                    <img src="" alt="Arma 7" id="weapon7" class="weapon-image">
+                </div>
+                <div class="backpack-slot" id="slot8" onclick="addWeapon(8)">
+                    <img src="" alt="Arma 8" id="weapon8" class="weapon-image">
+                </div>
+                <div class="backpack-slot" id="slot9" onclick="addWeapon(9)">
+                    <img src="" alt="Arma 9" id="weapon9" class="weapon-image">
+                </div>
+                <div class="backpack-slot" id="slot10" onclick="addWeapon(10)">
+                    <img src="" alt="Arma 10" id="weapon10" class="weapon-image">
+                </div>
+                <div class="backpack-slot" id="slot11" onclick="addWeapon(11)">
+                    <img src="" alt="Arma 11" id="weapon11" class="weapon-image">
+                </div>
+                <div class="backpack-slot" id="slot12" onclick="addWeapon(12)">
+                    <img src="" alt="Arma 12" id="weapon12" class="weapon-image">
                 </div>
             </div>
         </section>
@@ -89,16 +65,25 @@
     </footer>
 
     <script>
-        function updateStatus() {
-            document.getElementById('vigor-value').textContent = document.getElementById('vigor').value;
-            document.getElementById('mind-value').textContent = document.getElementById('mind').value;
-            document.getElementById('endurance-value').textContent = document.getElementById('endurance').value;
-            document.getElementById('strength-value').textContent = document.getElementById('strength').value;
-            document.getElementById('dexterity-value').textContent = document.getElementById('dexterity').value;
-            document.getElementById('intelligence-value').textContent = document.getElementById('intelligence').value;
-            document.getElementById('faith-value').textContent = document.getElementById('faith').value;
-            document.getElementById('arcane-value').textContent = document.getElementById('arcane').value;
+        function addWeapon(slot) {
+            const weaponImages = [
+                'https://eldenring.wiki.fextralife.com/file/Elden-Ring/carian_greatsword_(royal)_sorcery_elden_ring_wiki_guide_200px.png', // Exemplo de imagem de arma
+                'https://eldenring.wiki.fextralife.com/file/Elden-Ring/longsword_sorcery_elden_ring_wiki_guide_200px.png', // Exemplo 2
+                'https://eldenring.wiki.fextralife.com/file/Elden-Ring/katana_sorcery_elden_ring_wiki_guide_200px.png' // Exemplo 3
+                // Adicione mais imagens conforme necessário
+            ];
+
+            // Seleciona o slot e a imagem do jogador
+            const slotElement = document.getElementById(`slot${slot}`);
+            const weaponImageElement = document.getElementById(`weapon${slot}`);
+
+            // Adiciona a imagem de uma arma à mochila
+            const randomWeaponIndex = Math.floor(Math.random() * weaponImages.length);
+            const imageURL = weaponImages[randomWeaponIndex];
+
+            weaponImageElement.src = imageURL;
+            weaponImageElement.style.display = 'block'; // Torna a imagem visível
         }
     </script>
 </body>
-    </html>
+</html>
