--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <title>Mochila RPG</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
-<body>
+<body><div class="status-container">
+  <h2>Status do Personagem</h2>
+  <div id="attributes"></div>
+</div>
   <div class="container">
     <h1>Sua Mochila de Aventura</h1>
 
